# SPDX-License-Identifier: MIT OR Apache-2.0
#
# IronAuth Cargo virtual workspace. The crate graph mirrors the design seams laid
# down in milestone M1: ironauth-env is the determinism seam (all wall-clock time,
# monotonic time, and entropy access flows through it, enforced by
# scripts/invariant-lints.sh), ironauth-config is the strict configuration layer
# (fail-fast parsing, secret indirection, the feature maturity ladder), and
# ironauth is the single-binary entry point. Later M1 issues add the server
# skeleton (#5), the persistence substrate (#6, #7), the JOSE and signing cores
# (#8, #9), the SSRF-hardened fetcher (#10), and the management API skeleton
# (#11), each as its own crate behind a documented seam.

[workspace]
resolver = "2"
members = [
    "crates/ironauth-env",
    "crates/ironauth-config",
    "crates/ironauth-server",
    "crates/ironauth",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ELares/IronAuth"

[workspace.dependencies]
ironauth-env = { path = "crates/ironauth-env", version = "0.1.0" }
ironauth-config = { path = "crates/ironauth-config", version = "0.1.0" }
ironauth-server = { path = "crates/ironauth-server", version = "0.1.0" }
getrandom = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
schemars = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP runtime and middleware (see docs/adr/0001-http-runtime.md). Pure Rust,
# musl-static friendly; no TLS crate on the default path (a terminating proxy
# handles TLS).
tokio = { version = "1", default-features = false }
axum = { version = "0.8", default-features = false }
tower = { version = "0.5", default-features = false }
tower-http = { version = "0.6", default-features = false }
http = "1"
http-body-util = "0.1"

# Observability: structured logs and Prometheus metrics.
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }

# OpenTelemetry OTLP trace export, compiled only behind the non-default `otlp`
# feature so the default build and the musl static lane stay lean and
# protoc-free (grpc-tonic ships pre-generated protobuf code).
opentelemetry = "0.27"
opentelemetry_sdk = "0.27"
opentelemetry-otlp = { version = "0.27", default-features = false }
tracing-opentelemetry = "0.28"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
# Pedantic is the workspace floor; CI promotes warnings to errors with -D warnings.
# Exceptions are granted per item with an inline reason, never blanket-allowed.
pedantic = { level = "warn", priority = -1 }
