# SPDX-License-Identifier: MIT OR Apache-2.0
#
# IronAuth Cargo virtual workspace. The crate graph mirrors the design seams laid
# down in milestone M1: ironauth-env is the determinism seam (all wall-clock time,
# monotonic time, and entropy access flows through it, enforced by
# scripts/invariant-lints.sh), ironauth-config is the strict configuration layer
# (fail-fast parsing, secret indirection, the feature maturity ladder), and
# ironauth is the single-binary entry point. Later M1 issues add the server
# skeleton (#5), the persistence substrate (#6, #7), the JOSE and signing cores
# (#8, #9), the SSRF-hardened fetcher (#10), and the management API skeleton
# (#11), each as its own crate behind a documented seam.

[workspace]
resolver = "2"
members = [
    "crates/ironauth-env",
    "crates/ironauth-config",
    "crates/ironauth-server",
    "crates/ironauth-store",
    "crates/ironauth-fetch",
    "crates/ironauth",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ELares/IronAuth"

[workspace.dependencies]
ironauth-env = { path = "crates/ironauth-env", version = "0.1.0" }
ironauth-config = { path = "crates/ironauth-config", version = "0.1.0" }
ironauth-server = { path = "crates/ironauth-server", version = "0.1.0" }
ironauth-store = { path = "crates/ironauth-store", version = "0.1.0" }
ironauth-fetch = { path = "crates/ironauth-fetch", version = "0.1.0" }
getrandom = "0.3"

# Persistence and isolation layer (crates/ironauth-store). Runtime query API
# only (sqlx::query / query_as / QueryBuilder), never the compile-time-checked
# query! macros, so the DB-free CI lanes (clippy, msrv, musl, cargo check) stay
# database-free; a live database is needed only to run the integration tests.
# TLS: rustls with the ring provider and the OS trust store
# (tls-rustls-ring-native-roots). The plain `tls-rustls` alias pulls
# webpki-roots (CDLA-Permissive-2.0, not on the deny.toml allowlist); the
# native-roots variant uses rustls-native-certs (MIT/Apache/ISC) instead. No
# native-tls/openssl, no aws-lc, no webpki-roots, so the tree stays permissive
# and the musl static lane holds (rustls-native-certs reads /etc/ssl at runtime,
# no C dependency). Pinned to the 0.8 line: 0.9 floors above MSRV 1.85 (see the
# crate's CHANGELOG and Cargo.lock pins).
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls-ring-native-roots",
    "postgres",
] }
base64 = "0.22"
trybuild = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
schemars = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP runtime and middleware (see docs/adr/0001-http-runtime.md). Pure Rust,
# musl-static friendly; no TLS crate on the default path (a terminating proxy
# handles TLS).
tokio = { version = "1", default-features = false }
axum = { version = "0.8", default-features = false }
tower = { version = "0.5", default-features = false }
tower-http = { version = "0.6", default-features = false }
http = "1"
http-body-util = "0.1"

# Outbound fetch stack (crates/ironauth-fetch, the single SSRF-hardened
# dispatcher; see docs/adr/0003-outbound-fetch.md). hyper's low-level client
# connection API is used with a custom connector so the host is resolved,
# validated, and pinned exactly once (no DNS-rebinding window); no high-level
# pooling client that would re-resolve. TLS is rustls with the ring provider and
# the OS trust store, matching ironauth-store: no aws-lc, no native-tls/openssl,
# no webpki-roots, so the tree stays permissive and the musl static lane holds.
hyper = { version = "1", default-features = false }
hyper-util = { version = "0.1", default-features = false }
tokio-rustls = { version = "0.26", default-features = false, features = [
    "logging",
    "tls12",
    "ring",
] }
rustls-native-certs = "0.8"
bytes = "1"

# Observability: structured logs and Prometheus metrics.
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }

# OpenTelemetry OTLP trace export, compiled only behind the non-default `otlp`
# feature so the default build and the musl static lane stay lean and
# protoc-free (grpc-tonic ships pre-generated protobuf code).
opentelemetry = "0.27"
opentelemetry_sdk = "0.27"
opentelemetry-otlp = { version = "0.27", default-features = false }
tracing-opentelemetry = "0.28"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
# Pedantic is the workspace floor; CI promotes warnings to errors with -D warnings.
# Exceptions are granted per item with an inline reason, never blanket-allowed.
pedantic = { level = "warn", priority = -1 }
