# SPDX-License-Identifier: MIT OR Apache-2.0
#
# IronAuth Cargo virtual workspace. The crate graph mirrors the design seams laid
# down in milestone M1: ironauth-env is the determinism seam (all wall-clock time,
# monotonic time, and entropy access flows through it, enforced by
# scripts/invariant-lints.sh), ironauth-config is the strict configuration layer
# (fail-fast parsing, secret indirection, the feature maturity ladder), and
# ironauth is the single-binary entry point. Later M1 issues add the server
# skeleton (#5), the persistence substrate (#6, #7), the JOSE and signing cores
# (#8, #9), the SSRF-hardened fetcher (#10), and the management API skeleton
# (#11), each as its own crate behind a documented seam.

[workspace]
resolver = "2"
members = [
    "crates/ironauth-env",
    "crates/ironauth-config",
    "crates/ironauth-server",
    "crates/ironauth-store",
    "crates/ironauth-fetch",
    "crates/ironauth-jose",
    "crates/ironauth-webauthn",
    "crates/ironauth-kms",
    "crates/ironauth-admin",
    "crates/ironauth-oidc",
    "crates/ironauth-quota",
    "crates/ironauth-screening",
    "crates/ironauth-apply",
    "crates/ironauth-import",
    "crates/ironauth-importers",
    "crates/ironauth-connector",
    "crates/ironauth",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ELares/IronAuth"

[workspace.dependencies]
ironauth-env = { path = "crates/ironauth-env", version = "0.1.0" }
ironauth-config = { path = "crates/ironauth-config", version = "0.1.0" }
ironauth-connector = { path = "crates/ironauth-connector", version = "0.1.0" }
ironauth-server = { path = "crates/ironauth-server", version = "0.1.0" }
ironauth-store = { path = "crates/ironauth-store", version = "0.1.0" }
ironauth-fetch = { path = "crates/ironauth-fetch", version = "0.1.0" }
ironauth-jose = { path = "crates/ironauth-jose", version = "0.1.0" }
ironauth-webauthn = { path = "crates/ironauth-webauthn", version = "0.1.0" }
ironauth-kms = { path = "crates/ironauth-kms", version = "0.1.0" }
ironauth-admin = { path = "crates/ironauth-admin", version = "0.1.0" }
ironauth-oidc = { path = "crates/ironauth-oidc", version = "0.1.0" }
ironauth-quota = { path = "crates/ironauth-quota", version = "0.1.0" }
ironauth-screening = { path = "crates/ironauth-screening", version = "0.1.0" }
ironauth-apply = { path = "crates/ironauth-apply", version = "0.1.0" }
ironauth-import = { path = "crates/ironauth-import", version = "0.1.0" }
ironauth-importers = { path = "crates/ironauth-importers", version = "0.1.0" }
getrandom = "0.3"

# OpenAPI 3.1 source of truth for the management API (crates/ironauth-admin,
# issue #11). utoipa derives the OpenAPI 3.1 document from the `#[utoipa::path]`
# annotations on the axum handlers; the handlers are listed once in the
# `#[derive(OpenApi)]` `paths(...)` and wired to the same paths in the router, and
# scripts/openapi-check.sh regenerates and git-diffs the committed spec so any
# drift fails the build. utoipa is MIT OR Apache-2.0 with MSRV 1.75 (below the
# workspace 1.85 floor), pulls no non-permissive dependency, and is pure Rust
# (musl static clean). axum_extras teaches the macros axum's Path/Query
# extractors. The utoipa-axum route-binding helper is deliberately NOT used: it
# pulls the unmaintained `paste` crate (RUSTSEC-2024-0436), which `cargo deny`
# rejects; wiring the router by hand keeps the dependency graph clean.
utoipa = { version = "5", features = ["axum_extras"] }

# Persistence and isolation layer (crates/ironauth-store). Runtime query API
# only (sqlx::query / query_as / QueryBuilder), never the compile-time-checked
# query! macros, so the DB-free CI lanes (clippy, msrv, musl, cargo check) stay
# database-free; a live database is needed only to run the integration tests.
# TLS: rustls with the ring provider and the OS trust store
# (tls-rustls-ring-native-roots). The plain `tls-rustls` alias pulls
# webpki-roots (CDLA-Permissive-2.0, not on the deny.toml allowlist); the
# native-roots variant uses rustls-native-certs (MIT/Apache/ISC) instead. No
# native-tls/openssl, no aws-lc, no webpki-roots, so the tree stays permissive
# and the musl static lane holds (rustls-native-certs reads /etc/ssl at runtime,
# no C dependency). Pinned to the 0.8 line: 0.9 floors above MSRV 1.85 (see the
# crate's CHANGELOG and Cargo.lock pins).
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls-ring-native-roots",
    "postgres",
] }
base64 = "0.22"
# Unicode NFKC normalization for the central identifier canonicalization seam
# (crates/ironauth-store, issue #54). NFKC folds the compatibility-confusable class
# (fullwidth ASCII, ligatures, circled forms) onto ordinary forms so a homoglyph
# spoof of a login handle canonicalizes to the same value as the real one. Pure
# Rust, permissive (MIT OR Apache-2.0), and ALREADY in the tree transitively (sqlx
# -> url -> idna -> idna_adapter -> unicode-normalization), so this adds a direct
# edge, not a new crate: the dependency graph, licenses, MSRV 1.85, and the musl
# static lane are unchanged.
unicode-normalization = "0.1"
# Unicode General_Category lookup for the identifier canonicalization seam
# (crates/ironauth-store, issue #54): step 1 strips invisible / control / format /
# separator characters by PROPERTY (Cc/Cf/Zl/Zp) rather than a hand-curated
# code-point list with gaps. Pure Rust, permissive (MIT OR Apache-2.0), and ALREADY
# in the tree transitively (sqlx -> ... -> stringprep -> unicode-properties), so this
# adds a direct edge, not a new crate; MSRV 1.85 and the musl static lane hold. Only
# the general-category table is pulled (default emoji feature disabled).
unicode-properties = { version = "0.1", default-features = false, features = [
    "general-category",
] }
# Full Unicode Default Case Folding for the identifier canonicalization seam
# (crates/ironauth-store, issue #54): folds the case pairs where simple lowercasing
# diverges (the German sharp s, the Greek final sigma), so a mixed-case enumeration
# variant of a login handle canonicalizes to one form. A standard unicode-rs crate,
# permissive (MIT), pure Rust with no build script, depending only on
# unicode-normalization (already in the tree). MSRV 1.85 and the musl static lane
# hold; cargo-deny passes.
caseless = "0.2"
# Argon2id password hashing for the bootstrap login/registration surface
# (issue #20), at the OWASP default parameters. Pure Rust (RustCrypto), permissive
# (MIT OR Apache-2.0), no C dependency, so the tree stays musl-static clean and
# MSRV 1.85 holds. Salt bytes are drawn from the ironauth-env entropy seam (never
# the crate's own RNG), so hashing stays deterministic under test and the
# invariant lints are satisfied.
argon2 = "0.5"
# The two OAuth2/OIDC client-secret authentication methods interoperate with a
# real third-party Rust OAuth 2.0 client (issue #20 acceptance): the oauth2 crate
# drives both client_secret_basic and client_secret_post against the token
# endpoint in a DB-backed test. default-features off drops its bundled reqwest
# client (the test drives the in-process router directly), keeping the dev-graph
# lean and free of any advisory-flagged transitive crate. MIT OR Apache-2.0,
# builds under MSRV 1.85.
oauth2 = { version = "5", default-features = false }
# Direct crypto primitives for the hardened JOSE verifier (crates/ironauth-jose;
# see docs/adr/0004-jose-verification.md). ring is ALREADY in the tree via
# rustls; this adds a direct edge, not a new crate, so the graph, licenses
# (Apache-2.0 AND ISC, both on the deny.toml allowlist), MSRV 1.85, and the musl
# static lane are unchanged. Default features keep `alloc` on, which the RSA
# verification path requires. The verifier is built on ring's low-level
# signature primitives on purpose: high-level JOSE crates carry the very CVE
# classes issue #8 closes.
ring = "0.17"
# SHA-256 for migration checksums (drift and tamper detection). Pure Rust
# (no asm/C feature), permissive (MIT OR Apache-2.0), already in the tree via
# sqlx, so this adds a direct edge but no new crate; MSRV 1.85 and musl clean.
sha2 = "0.10"
# SHA-1 for the HIBP k-anonymity breached-password screening (crates/ironauth-screening,
# issue #63). HIBP's range API keys on the SHA-1 of the password; this is NOT a
# password hash (Argon2id owns that, issue #62), only the range lookup key, computed
# LOCALLY so only the 5-char hex prefix ever leaves the process. Pure Rust
# (RustCrypto), permissive (MIT OR Apache-2.0), no C dependency, so the tree stays
# musl-static clean and MSRV 1.85 holds. Shares the RustCrypto `digest` traits already
# in the tree via sha2, so this adds a direct edge, not a new trait graph.
sha1 = "0.10"
# CBOR decoding for the WebAuthn ceremony layer (crates/ironauth-webauthn, issue
# #65): the registration attestationObject and the COSE credential public key are
# CBOR. ciborium is the standard Rust CBOR implementation, pure Rust with no build
# script and no C dependency (musl static clean), and its whole tree is permissive
# and on the deny.toml allowlist (ciborium/ciborium-io/ciborium-ll are Apache-2.0,
# half is MIT OR Apache-2.0). MSRV 1.58, well below the workspace 1.85 floor. Only
# the decode path is used: a bounded walk of a `ciborium::value::Value` tree, never
# a signature or key primitive (those stay in ironauth-jose on ring). The
# alternative, webauthn-rs, is rejected: webauthn-rs-core is MPL-2.0, which is NOT
# on the cargo-deny license allowlist and would fail `cargo deny check`.
ciborium = "0.2"
trybuild = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
schemars = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Parse the (possibly repeated) RFC 8707 `resource` request parameter (issue #28)
# from a raw query/form body, which a typed serde struct cannot capture. This is the
# SAME crate axum already uses for form/query extraction, so no new crate enters the
# graph; permissive, MSRV 1.85 and musl clean.
serde_urlencoded = "0.7"

# HTTP runtime and middleware (see docs/adr/0001-http-runtime.md). Pure Rust,
# musl-static friendly; no TLS crate on the default path (a terminating proxy
# handles TLS).
tokio = { version = "1", default-features = false }
axum = { version = "0.8", default-features = false }
tower = { version = "0.5", default-features = false }
tower-http = { version = "0.6", default-features = false }
http = "1"
http-body-util = "0.1"

# Outbound fetch stack (crates/ironauth-fetch, the single SSRF-hardened
# dispatcher; see docs/adr/0003-outbound-fetch.md). hyper's low-level client
# connection API is used with a custom connector so the host is resolved,
# validated, and pinned exactly once (no DNS-rebinding window); no high-level
# pooling client that would re-resolve. TLS is rustls with the ring provider and
# the OS trust store, matching ironauth-store: no aws-lc, no native-tls/openssl,
# no webpki-roots, so the tree stays permissive and the musl static lane holds.
hyper = { version = "1", default-features = false }
hyper-util = { version = "0.1", default-features = false }
tokio-rustls = { version = "0.26", default-features = false, features = [
    "logging",
    "tls12",
    "ring",
] }
rustls-native-certs = "0.8"
bytes = "1"

# Observability: structured logs and Prometheus metrics.
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }

# OpenTelemetry OTLP trace export, compiled only behind the non-default `otlp`
# feature so the default build and the musl static lane stay lean and
# protoc-free (grpc-tonic ships pre-generated protobuf code).
opentelemetry = "0.32"
opentelemetry_sdk = "0.27"
opentelemetry-otlp = { version = "0.27", default-features = false }
tracing-opentelemetry = "0.28"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
# Pedantic is the workspace floor; CI promotes warnings to errors with -D warnings.
# Exceptions are granted per item with an inline reason, never blanket-allowed.
pedantic = { level = "warn", priority = -1 }
