# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "ironauth-admin"
version = "0.1.0"
description = "IronAuth OpenAPI-first management API: cursor pagination, Idempotency-Key replay, environment-scoped credentials, and same-transaction audit"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# Explicit test list: the DB-backed integration tests are gated behind
# required-features = ["testing"] so the DB-free lanes (clippy, msrv, musl,
# cargo check) neither enable the store's test harness nor try to run the DB
# tests. Auto-discovery is off so nothing slips past the gate.
autotests = false

[dependencies]
ironauth-env.workspace = true
ironauth-config.workspace = true
ironauth-store.workspace = true
# The DCR abuse controls (issue #31) mint initial access tokens carrying named,
# reusable policy chains. The policy-primitive type and its parse/serialize helpers
# are owned by the OIDC policy engine, so the management API reuses them to validate
# and canonicalize a policy at create time (one source of truth for the primitive
# shape, no drift between what the admin stores and what the engine applies).
ironauth-oidc.workspace = true
# The full identity export (issue #58) SERIALIZES the same line-delimited record
# format the streaming bulk import consumes, so export-to-import round-trips by
# construction; the outbound credential-verification endpoint reuses the same
# algorithm-tagged foreign-hash verify layer the login path does (native Argon2id
# and every foreign scheme through one `ForeignHash`). One source of truth for both
# the record shape and the hash dispatch, no drift between export and import.
ironauth-import.workspace = true

axum = { workspace = true, features = ["matched-path", "query", "json"] }
tower = { workspace = true }
http.workspace = true
serde = { workspace = true }
serde_json.workspace = true
# Opaque cursor encoding (URL-safe, no padding), matching the identifier codec.
base64.workspace = true
# SHA-256 for management-key hashing and the Idempotency-Key request fingerprint.
# Pure Rust, permissive, already in the tree via ironauth-store; no new crate.
sha2.workspace = true
tracing.workspace = true
# OpenAPI 3.1 source of truth. utoipa derives the spec from the `#[utoipa::path]`
# annotations on the handlers (listed once in `#[derive(OpenApi)]` paths(...)),
# and scripts/openapi-check.sh git-diffs the regenerated spec so drift fails the
# build. The utoipa-axum route-binder is intentionally avoided: it pulls the
# unmaintained `paste` crate (RUSTSEC-2024-0436) that cargo deny rejects, so the
# router is wired by hand instead.
utoipa.workspace = true

[features]
default = []
# Enables the ironauth-store real-database harness for the DB-backed integration
# tests (mirrors ironauth-store's own `testing` gate). Adds no runtime surface.
testing = ["ironauth-store/testing"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tower = { workspace = true, features = ["util"] }
http-body-util.workspace = true
# The exit-export round-trip test (issue #58) drives the real streaming import
# engine to re-import an export into a fresh scope, and seeds users carrying real
# native Argon2id and foreign bcrypt hashes so the round-trip covers both a native
# credential and an imported foreign one. Both crates are already in the tree.
argon2.workspace = true
bcrypt = "0.16"
# Database-FREE test support only: builds a LAZY pool (parses the URL, never
# connects) so the unit tests and the router/spec contract test can construct an
# AdminState without a database. No connection is ever opened (auth rejects at the
# extractor before any store access), so the DB-free lanes stay database-free.
sqlx = { workspace = true }

# Database-free OpenAPI contract test: proves the served spec is OpenAPI 3.1 with
# stable operation ids and that the committed artifact matches. Always runs.
[[test]]
name = "openapi_contract"
path = "tests/openapi_contract.rs"

# Cursor-pagination conformance: a multi-page walk with no loss or duplication.
[[test]]
name = "pagination"
path = "tests/pagination.rs"
required-features = ["testing"]

# Config snapshot export endpoint (issue #43): the operator and the environment's
# own management key export a canonical secret-free snapshot; a cross-environment
# key is refused. Needs a real database (DATABASE_URL).
[[test]]
name = "config_snapshot"
path = "tests/config_snapshot.rs"
required-features = ["testing"]

# Idempotency-Key replay: a replay returns the original response and writes no
# second audit row (verified against the audit log).
[[test]]
name = "idempotency"
path = "tests/idempotency.rs"
required-features = ["testing"]

# Credential scoping: uniform not-found for cross-scope resource probes, and the
# loud wrong-scope error naming expected vs actual scope.
[[test]]
name = "scoping"
path = "tests/scoping.rs"
required-features = ["testing"]

# Every management mutation writes its audit row in the same transaction.
[[test]]
name = "audit"
path = "tests/audit.rs"
required-features = ["testing"]

# The management IDOR probes registered with the #6 harness, over a real database.
[[test]]
name = "idor"
path = "tests/idor.rs"
required-features = ["testing"]

# The four-level resource model as public APIs (issue #41): organization CRUD and
# pagination, cross-tenant and wrong-scope isolation, idempotent creation, the
# operator-plane read surface, and the resource-type classification catalog. Needs
# a real database (DATABASE_URL).
[[test]]
name = "resource_model"
path = "tests/resource_model.rs"
required-features = ["testing"]

# DCR abuse-control management surface (issue #31): authoring a reusable policy
# (create/list/replay/conflict/invalid-primitive), minting an initial access token
# carrying a policy-chain snapshot (plaintext once, idempotent replay, unknown policy
# and out-of-range lifetime rejected), and reading/verifying a dynamically registered
# client's quarantine state (verify lifts it idempotently; not-found is anti-oracle).
[[test]]
name = "dcr"
path = "tests/dcr.rs"
required-features = ["testing"]

# Session and refresh-family fleet operations (issue #32): searchable sessions and
# refresh families, the immediate revoke, the offline-preserving cascade and its
# hard-kill override, the scope-fenced bulk revoke, and the uniform not-found for every
# foreign id.
[[test]]
name = "sessions"
path = "tests/sessions.rs"
required-features = ["testing"]

# The tenant lifecycle API and residency attributes over HTTP (#46).
[[test]]
name = "tenant_lifecycle"
path = "tests/tenant_lifecycle.rs"
required-features = ["testing"]

# Environments as first-class typed objects (issue #42): environment creation with
# a typed kind, the derived guardrail flags on the view (noindex and banner for
# non-production, https-only and one-time-view for production), the unknown-kind
# rejection, the production custom-domain guardrail returning a structured error,
# and unbounded environment creation with no count gate.
[[test]]
name = "environments"
path = "tests/environments.rs"
required-features = ["testing"]

# Admin user management over HTTP (issue #52): the Keycloak/FusionAuth paper-cut
# checklist (caller-supplied id on create, accurate list pagination, PATCH), the
# lifecycle state transitions with the session cascade, external-id link/unlink and
# uniqueness, and the uniform not-found for every cross-scope probe.
[[test]]
name = "users"
path = "tests/users.rs"
required-features = ["testing"]

# Admin user invitations over HTTP (issue #60): the one-time token is returned at
# create/resend and never on a read or an idempotent replay, revoke makes a pending
# invitation unacceptable, and every cross-scope probe is the uniform not-found.
[[test]]
name = "invitations"
path = "tests/invitations.rs"
required-features = ["testing"]

# The exit-friendliness covenant (issue #58): the full identity export round-trips
# into a fresh instance with logins working (including a user on an imported foreign
# hash), a field-coverage test fails on an unexported user column, the export is
# permission-gated and audited, the export core streams within a memory ceiling, and
# the outbound credential-verification endpoint is disabled by default.
[[test]]
name = "export"
path = "tests/export.rs"
required-features = ["testing"]

[lints]
workspace = true
